--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="flex items-center justify-between glass-panel px-6 py-2 shadow-sm">
                 <a href="#" class="text-2xl font-bold text-slate-800">
                     <!-- LOGO IMAGE -->
-                    <img src="https://github.com/dronelanka/dronelanka.github.io/blob/main/src/drone%20photography%20sri%20lanka%20vanowarna%20aerials.png?raw=true" alt="Vanowarna Aerials Logo" class="h-20 w-full">
+                    <img src="https://github.com/dronelanka/dronelanka.github.io/blob/main/src/drone%20photography%20sri%20lanka%20vanowarna%20aerials.png?raw=true" alt="Vanowarna Aerials Logo" class="h-10 md:h-20 w-auto">
                 </a>
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="#portfolio" class="hover:text-sky-600 transition-colors">Portfolio</a>
