--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <p class="text-lg md:text-xl text-slate-600 mb-8 reveal" style="transition-delay: 200ms;">
                     Over 9+ years of experience in stunning Aerial Photography, Videography, and Precision Mapping.
                 </p>
-                <a href="#portfolio" class="bg-slate-800 text-white px-8 py-4 rounded-full hover:bg-slate-900 transition-all shadow-lg text-lg font-semibold reveal" style="transition-delay: 400ms;">
+                <a href="#portfolio" class="bg-slate-800 text-white px-8 py-4 rounded-full hover:bg-slate-900 transition-all shadow-lg text-lg font-semibold reveal" style="transition-delay: 300ms;">
                     View Our Work
                 </a>
             </div>
@@ -195,7 +195,7 @@
         <section id="about" class="py-16 md:py-24">
             <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-12 items-center">
                 <div class="reveal">
-                    <img src="https://placehold.co/600x400/e2e8f0/4a5568?text=Drone+in+Action" alt="A drone flying over a scenic Sri Lankan landscape" class="rounded-2xl shadow-xl w-full">
+                    <img src="https://github.com/dronelanka/dronelanka.github.io/blob/main/src/vanowarna%20aerials%20drone%20lanka%20about%20us.jpg?raw=true" alt="A drone flying over a scenic Sri Lankan landscape Vanowarna Aerials Drone Lanka" class="rounded-2xl shadow-xl w-full">
                 </div>
                 <div class="reveal" style="transition-delay: 200ms;">
                     <h2 class="text-3xl font-bold text-slate-800 mb-4">About Vanowarna Aerials</h2>
