--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
     <meta property="og:url" content="https://dronelanka.github.io/">
     <meta property="og:title" content="Vanowarna Aerials - Drone Photography & Videography in Sri Lanka">
     <meta property="og:description" content="Your Drone Photography Partner in Sri Lanka with over 9+ years of experience.">
-    <meta property="og:image" content="https://placehold.co/1200x630/e2e8f0/4a5568?text=Vanowarna+Aerials">
+    <meta property="og:image" content="https://github.com/dronelanka/dronelanka.github.io/blob/main/src/drone%20lanka%20thumbnail%20vanowarna%20aerials%20drone%20photography%20sri%20lanka.jpg?raw=true">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://dronelanka.github.io/">
     <meta property="twitter:title" content="Vanowarna Aerials - Drone Photography & Videography in Sri Lanka">
     <meta property="twitter:description" content="Your Drone Photography Partner in Sri Lanka with over 9+ years of experience.">
-    <meta property="twitter:image" content="https://placehold.co/1200x630/e2e8f0/4a5568?text=Vanowarna+Aerials">
+    <meta property="twitter:image" content="https://github.com/dronelanka/dronelanka.github.io/blob/main/src/drone%20lanka%20thumbnail%20vanowarna%20aerials%20drone%20photography%20sri%20lanka.jpg?raw=true">
+
+    <link rel="image_src" href="https://github.com/dronelanka/dronelanka.github.io/blob/main/src/drone%20lanka%20thumbnail%20vanowarna%20aerials%20drone%20photography%20sri%20lanka.jpg?raw=true">
 
     <!-- Favicon -->
     <link rel="icon" href="https://github.com/dronelanka/dronelanka.github.io/blob/main/src/drone%20photography%20sri%20lanka.png?raw=true" type="image/png" alt="Vanowarna Aerials Drone Photography Sri Lanka Favicon">
