--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="#portfolio" class="hover:text-sky-600 transition-colors">Portfolio</a>
                     <a href="#services" class="hover:text-sky-600 transition-colors">Services</a>
+                    <a href="blog.html" class="hover:text-sky-600 transition-colors">Blog</a> 
                     <a href="#pricing" class="hover:text-sky-600 transition-colors">Pricing</a>
                     <a href="#contact" class="bg-sky-600 text-white px-5 py-2 rounded-full hover:bg-sky-700 transition-all shadow">Request a Quote</a>
                 </div>
